tdf#98678 removed double for-loop

By error the for-loop was added twice, removed one

Change-Id: If098dae28857bd87a07bb828bab2c7330c5fd7f8
Reviewed-on: https://gerrit.libreoffice.org/23294
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Björn Michaelsen <bjoern.michaelsen@canonical.com>